--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "",
+    "travis": "npm run lint && npm run test && npm run build"
   },
   "dependencies": {
     "core-js": "^2.6.5",
